Fix styling of week nav and fix layout issue in IE11 (closes #564)

--- a/app/assets/stylesheets/modules/_timeline.styl
+++ b/app/assets/stylesheets/modules/_timeline.styl
@@ -334,7 +334,8 @@ input[type="checkbox"]
     padding 8px
     background #FFF
     border 1px solid $border_med
-    height calc(100vh - 350px)
+    max-height calc(100vh - 350px)
+    min-height 122px
     overflow-y auto
   ol
     list-style none
@@ -361,7 +362,7 @@ input[type="checkbox"]
     color $text
     font-size 15px
     text-decoration none
-    width 108px
+    width 75px
     overflow hidden
     white-space nowrap
     text-overflow ellipsis
